# iis

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: fetch_data_hourly.yml  test.yml
data/processed/: station_data.csv
data/processed/stations/: station_1.csv  station_10.csv  station_11.csv  station_12.csv  station_13.csv  station_14.csv  station_15.csv  station_16.csv  station_17.csv  station_18.csv  station_19.csv  station_2.csv  station_20.csv  station_21.csv  station_22.csv  station_23.csv  station_24.csv  station_25.csv  station_26.csv  station_27.csv  station_28.csv  station_29.csv  station_3.csv  station_4.csv  station_5.csv  station_6.csv  station_7.csv  station_8.csv  station_9.csv
data/raw/: raw_data.json  station_data.csv  test.csv
notebooks/: train_model.ipynb  view_data.ipynb
other/: predict_test.csv
reports/: metrics.txt  train_metrics.txt
src/data/: fetch_and_process_data.py  fetch_data.py  scheduler.py
src/data/models/: data_collector.py  station_data.py
src/models/: model.py  preprocessing.py
src/models/scripts/: train_model.py
src/serve/: server.py
src/serve/routes/: predict.py
src/utils/: logger.py  paths.py
test/: predict_test.py
