[tool.poetry]
name = "iis"
version = "0.1.0"
description = ""
authors = ["PolnerFilip <filip.polner@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
requests = "^2.31.0"
schedule = "^1.2.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
